# 2023-04-17-Minecraft-Server-Backup-Creator

./: .gitignore  pyproject.toml  readme.md  requirements.txt
.github/workflows/: on tag release on Github.yaml  on-tag-create-release.yaml
src/: exec_server_command.py  main.py  main_outer.py
